# detector

./: CMakeLists.txt  package.xml
include/detector/: detector.hpp  detector_node.hpp  inference.h  serial_com.hpp
launch/: detector.launch.py
src/: detector.cpp  detector_node.cpp  inference.cpp  serial_com.cpp
